1999-06-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* protocol.el (methodinfo): New structure.
	(generate-expanded-methodinfo-list, methodinfo-list-for-phase,
	count-included-methodinfo-entries, count-method-examples,
	compare-methodinfo): Use methodinfo structure instead
	of ad-hoc list.

1999-06-21  Alex Lancaster  <alex@santafe.edu>

	* protocol.el (generic-deprecated-list): For protocol and method
	objects, return the `deprecated-list' element of the defstruct,
	otherwise raise an error.
	(deprecated-p): New function, use `generic-deprecated-list' to
	determine whether if object is deprecated or not.

1999-06-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add Makefile.protocol.

	* Makefile.protocol: New file.

1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules (.m.o): Use OBJC instead of CC, and OBJCFLAGS
	instead of CFLAGS.  Remove -Wno-import and -Wno-protocol.

1999-06-18  Alex Lancaster  <alex@santafe.edu>

	* protocol.el (protocol): Add deprecated-list to defstruct.
	(parse-state): Add deprecated-doc-list as new `parse state'.
	(*doc-types*): Add deprecated-doc.
	(parse-method): Set method-deprecated-list to the parsed version,
	and use it later to set the struct element.
	(check-common-tags): Add `//x:' as deprecated-doc string.
	(common-tag-change): Push the new line tag contents of
	deprecated-doc string onto the parse-state-deprecated-doc-list
	buffer.
	(handle-method): Reset `parse-state-deprecated-doc-list' to nil,
	after installing in method struct.
	(process-header-file): Add logic to test if a common tag *inside*
	a protocol.  If so, do processing on the deprecated-doc tag.

1999-06-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (OBJCFLAGS): Append EXTRAOBJCFLAGS.

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.appl.in ($(APPEXE)): Add EXTRALIBS.

1999-06-11  Alex Lancaster  <alex@santafe.edu>
